--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Auto chunking and embedding</title>
-		<link rel="stylesheet" href="style.css" />
+		<link href="{{ url_for('static', path='/style.css') }}" rel="stylesheet">
 	</head>
     <body>
         <div class="card">
@@ -12,7 +12,7 @@
 
             <p>This is a webhook space to chunk and embed a dataset when it changes.</p>
 
-            <p>Use this as a reference <a href="https://huggingface.co/docs/hub/webhooks-guide-auto-retrain" target="_blank">here</a>!</p>
+            <p>Use <a href="https://huggingface.co/docs/hub/webhooks-guide-auto-retrain" target="_blank">this</a> as a reference</p>
         </div>
     </body>
 </html>
